--- a/index.html
+++ b/index.html
@@ -1,101 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First App</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: Arial, Helvetica, sans-serif;
-      }
 
-      div {
-        width: 20%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-      button {
-        width: 100%;
-        margin: 10px 0px 5px 0px;
-      }
-    </style>
-    <script
-      src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"
-      type="application/javascript"
-    ></script>
+    div {
+      width: 20%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+    }
 
-    <script>
-      const MoodContractAddress = "0xd9145CCE52D386f254917e481eB44e9943F39138";
-      //Since our contract has 2 functions so our Contract ABI should specify that the contract contains constant, inputs, name, outputs, payable, stateMutability and type.
-      const MoodContractABI = [
-        {
-          inputs: [],
-          name: "getMood",
-          outputs: [
-            {
-              internalType: "string",
-              name: "",
-              type: "string",
-            },
-          ],
-          stateMutability: "view",
-          type: "function",
-        },
-        {
-          inputs: [
-            {
-              internalType: "string",
-              name: "_mood",
-              type: "string",
-            },
-          ],
-          name: "setMood",
-          outputs: [],
-          stateMutability: "nonpayable",
-          type: "function",
-        },
-      ];
-      let MoodContract;
-      let signer;
-      const provider = new ethers.providers.Web3Provider(
-        window.ethereum,
-        "goerli"
-      );
-      provider.send("eth_requestAccounts", []).then(() => {
-        provider.listAccounts().then((accounts) => {
-          signer = provider.getSigner(accounts[1]);
-          MoodContract = new ethers.Contract(
-            MoodContractAddress,
-            MoodContractABI,
-            signer
-          );
-        });
-      });
-      //create function to call function from smart contract
-      async function getMood() {
-        const getMoodPromise = MoodContract.getMood();
-        const Mood = await getMoodPromise;
-        console.log(Mood);
-      }
-      async function setMood() {
-        const mood = document.getElementById("mood").value;
-        const setMoodPromise = MoodContract.setMood(mood);
-        await setMoodPromise;
-      }
-    </script>
-  </head>
-  <body>
-    <div>
-      <h1>This is my dApp!</h1>
-      <p>Here we can set or get the mood:</p>
-      <label for="mood">Input Mood:</label> <br />
-      <input type="text" id="mood" />
-    </div>
+    button {
+      width: 100%;
+      margin: 10px 0px 5px 0px;
+    }
+  </style>
+</head>
+
+<body>
+  <div>
+    <h1>This is my dApp!</h1>
+    <p>Here we can set or get the mood:</p>
+    <label for="mood">Input Mood:</label> <br />
+    <input type="text" id="mood" />
     <button onclick="getMood()">Get Mood</button>
     <button onclick="setMood()">Set Mood</button>
-  </body>
+  </div>
+
+  <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+  <script>
+    const provider = new ethers.providers.Web3Provider(
+      window.ethereum,
+      "goerli"
+    );
+
+    const MoodContractAddress = "0xd9145CCE52D386f254917e481eB44e9943F39138";
+    const MoodContractABI = [
+      {
+        "inputs": [
+          {
+            "internalType": "string",
+            "name": "_mood",
+            "type": "string"
+          }
+        ],
+        "name": "setMood",
+        "outputs": [],
+        "stateMutability": "nonpayable",
+        "type": "function"
+      },
+      {
+        "inputs": [],
+        "name": "getMood",
+        "outputs": [
+          {
+            "internalType": "string",
+            "name": "",
+            "type": "string"
+          }
+        ],
+        "stateMutability": "view",
+        "type": "function"
+      }
+    ];
+
+    let MoodContract;
+    let signer;
+
+    provider.send("eth_requestAccounts", []).then(() => {
+      provider.listAccounts().then(function (accounts) {
+        signer = provider.getSigner(accounts[0]);
+        MoodContract = new ethers.Contract(
+          MoodContractAddress,
+          MoodContractABI,
+          signer
+        );
+      });
+    });
+
+    async function getMood() {
+      const getMoodPromise = MoodContract.getMood();
+      const Mood = await getMoodPromise;
+      console.log(Mood);
+    }
+
+    async function setMood() {
+      const mood = document.getElementById("mood").value;
+      const setMoodPromise = MoodContract.setMood(mood);
+      await setMoodPromise;
+    }
+
+
+  </script>
+</body>
+
 </html>
